--- a/src/app/pinguino/pinguino-list/pinguino-list.component.html
+++ b/src/app/pinguino/pinguino-list/pinguino-list.component.html
@@ -40,7 +40,7 @@
         </tbody>
       </table>
       <div class="Distribucion">
-        <p class="text-center">El pinguino con mas distribucion es: {{ masDistribucion }}</p>
+        <p class="text-center">El pinguino con mas distribucion es: {{ masPresencia }}</p>
       </div>
   </div>
 </div>
